Add lending stat to the pools endpoint
